--- a/Dasmoto's Arts & Crafts/style.css
+++ b/Dasmoto's Arts & Crafts/style.css
@@ -1,69 +1,54 @@
 body {
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-top: 0;
-    margin-bottom: 0;
-    background: linear-gradient(rgb(173, 173, 173),rgb(235, 200, 198),rgb(173, 173, 173));
+    margin-left: 1%;
+    font-family: Helvetica;
 }
 .header {
     background-image: url("/resources/pattern.jpeg"); 
-    height:300px;
-}
-img {
-    width: 30%;
-    box-shadow: 5px 5px 10px #000000;
-    float: center;
-    margin-right: 25%;
-    margin-left: 35%;
+    height:100px;
 }
 h1 {
-    color: rgb(0, 0, 0);
+    color: khaki;
     text-align: center;
-    font-family: Georgia;
     font-size: 100px;
-    line-height: 80px;
     font-weight: bold;
-    background-color: whitesmoke;
-    position: relative;
-    opacity: 0.50;
-    display: block;
-    padding-top: 50px;
 }
-h2 {
-    color: #141E30;
+.brush {
+    color: rgb(255, 255, 255);
     text-align: left;
-    font-family: Georgia;
-    font-size: 32px;
-    background-color: rgb(255, 255, 255);
-    position: relative;
-    opacity: 0.70;
-    display: inherit;
-    line-height: px;
     font-weight: bold;
+    font-size: 32px;
+    background-color: mediumspringgreen;
+    position: relative;
+    display: block;
+    line-height: 40px;
+}
+.frame {
+    color: white;
+    text-align: left;
+    font-weight: bold;
+    font-size: 32px;
+    background-color: lightcoral;
+    position: relative;
+    display: block;
+    line-height: 40px;
+}
+.walanafinnishna {
+    color: white;
+    text-align: left;
+    font-weight: bold;
+    font-size: 32px;
+    background-color: skyblue;
+    position: relative;
+    display: block;
+    line-height: 40px;
 }
 h3 {
-    text-align: center;
     font-size: 22px;
-    font-family: Georgia;
-}
-p {
-    text-align: center;
-    font-family: Georgia;
-}
-h6 {
-    background-color: black;
-    color: white;
-    margin-bottom: 0px;
-    position: relative;
-    display: block;
-    line-height: 30px;
-    opacity: 0.90;
-    text-align: center;
 }
 .first,
 .second,
 .third {
       font-weight: bold;
       color: blue;
-      font-size: 14px;
+      font-size: 16px;
 }
